docs: minor fixes
